src/objects/PIR_Resolution_Partners_Reference__c.object
<CustomObject>
    <description>It is used to store Reference number associated to the PIR Resolution Partners.</description>
    <fields>
        <fullName>Case_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Item Number</label>
        <referenceTo>Case_Item__c</referenceTo>
        <relationshipLabel>PIR Resolution Partners References</relationshipLabel>
        <relationshipName>PIR_Resolution_Partners_References</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Store the status of the Reference</description>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Days_Past_SLA__c</fullName>
        <formula>FLOOR(TODAY() - SLA_Due_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Past SLA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIR_Resolution_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>#US2853220 - Look up to RP record.</description>
        <label>PIR Resolution Partner</label>
        <referenceTo>PIR_Resolution_Partner__c</referenceTo>
        <relationshipLabel>PIR Resolution Partners References</relationshipLabel>
        <relationshipName>PIR_Resolution_Partners_References</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reference__c</fullName>
        <description>Store the PR or Benefit OPS #</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Reference #</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resolution_Partner_Name__c</fullName>
        <description>This field is used to display Resolution Partner Name.</description>
        <formula>PIR_Resolution_Partner__r.Provider_Matrix_Reactive__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resolution Partner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA_Completion_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SLA Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLA_Due_Date__c</fullName>
        <description>SLA Due Date of the Resolution Partner.</description>
        <formula>SLA_Routed_Date__c +  PIR_Resolution_Partner__r.Provider_Matrix_Reactive__r.Resolution_Partner_SLA__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SLA Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLA_Indicator__c</fullName>
        <description>ndicate icon based on SLA

Yellow icon = Open SLA
Green icon = Completed SLA
Red icon = SLA needs attention</description>
        <formula>IF(
(!ISBLANK( SLA_Completion_Date__c ) &amp;&amp; SLA_Completion_Date__c &lt; SLA_Due_Date__c &amp;&amp; Completed__c == TRUE ),
IMAGE(&quot;/img/msg_icons/confirm32.png&quot;, &quot;Status Indicator&quot;, 30, 30),
IF((SLA_Due_Date__c &gt; (TODAY()) &amp;&amp; Completed__c == FALSE),
IMAGE(&quot;/img/msg_icons/warning32.png&quot;, &quot;Status Indicator&quot;, 30, 30),
IMAGE(&quot;/img/msg_icons/error32.png&quot;, &quot;Status Indicator&quot;, 30, 30)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Yellow icon = Open SLA
Green icon = Completed SLA
Red icon = SLA needs attention</inlineHelpText>
        <label>SLA Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA_Routed_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SLA Routed Date</label>
        <type>Date</type>
    </fields>
    <label>PIR Resolution Partners Reference</label>
    <nameField>
        <displayFormat>PRPR-{000000000}</displayFormat>
        <label>PIR Resolution Partners Reference Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PIR Resolution Partners References</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>